fixing margin and text-alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,7 @@ body {
 .container {
     min-height: 400px;
     min-width: 300px;
-    margin: 30px;
+    margin: 30px auto;
     display: flex;
     flex-direction: column;
     align-items: center;
